feat: Update app to energy market analysis
Refactor the application to focus on energy market analysis. This includes updating the AI model to 'gemini-3.1-pro-preview', refining the prompt for core impact factor extraction, geopolitical analysis, and trend prediction. The customer-specific analysis has been removed to align with the new focus. Additionally, the README and metadata have been updated to reflect the application's new purpose.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
         .custom-scrollbar::-webkit-scrollbar-thumb:hover {
             background: #94a3b8;
         }
+        @keyframes spin-slow {
+            from { transform: rotate(0deg); }
+            to { transform: rotate(360deg); }
+        }
+        .animate-spin-slow {
+            animation: spin-slow 12s linear infinite;
+        }
     </style>
 <script type="importmap">
 {
@@ -40,9 +47,10 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
 <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+<script type="module" src="/index.tsx"></script>
 </body>
 </html>
